# My_ToDo_App

./: .gitignore  IMPLEMENTATION_NOTES.md  MODERN_UI_FEATURES.md  PHASE_IV_COMPLETION_REPORT.md  PROJECT_STRUCTURE.md  README.md  STARTUP_GUIDE.md  cookies.txt  docker-compose.yml  package-lock.json  temp_feature_desc.txt
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  add_name_column.py  check_schema.py  init_db.py  pyproject.toml  railway.json  requirements.txt  test_basic.py  todo_ai_chatbot.db
backend/api/: index.py
backend/src/: db.py  main.py
backend/src/api/: advanced_todo_api.py  auth.py  auth_middleware.py  chat_endpoint.py  todos.py
backend/src/dapr_components/: pubsub.yaml  secrets.yaml  statestore.yaml
backend/src/db/: migrations.py
backend/src/mcp/: advanced_tools.py
backend/src/models/: audit_log.py  conversation.py  message.py  models.py  scheduled_reminder.py  task.py  task_event.py  task_template.py  task_update.py  user.py
backend/src/services/: ai_service.py  database_service.py  mcp_server.py  mcp_server_official.py  todo_operations.py
backend/tests/integration/: test_todos.py
backend/tests/unit/: test_main.py
frontend/: .eslintrc.json  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
scripts/: ai-debugging.sh  ai-deployment.sh  ai-scaling.sh  build-images.sh  cluster-analysis.sh  deploy-cloud.sh  deploy-local.sh  deploy.sh  resource-optimization.sh  setup-phase-iv.sh  validate-deployment.sh  verify-deployment.sh
src/: errors.py  main.py
(+159 files in other folders)
